--- a/app/index.html
+++ b/app/index.html
@@ -5,16 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Hcode Treinamentos">
+    <meta name="author" content="Guilherme Selair">
 
-    <title>DropBox Clone</title>
+    <title>Projeto Morfeu - DropBox Clone</title>
 
-    <link href="bower_components/Ionicons/css/ionicons.min.css" rel="stylesheet">
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/dropbox-clone.css" rel="stylesheet">
-    <style>
-        
-    </style>
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <link href="assets/css/dropbox-clone.css" rel="stylesheet">
 </head>
 
 <body>
@@ -218,12 +214,12 @@
         </div>
     </div>
 
-    <!-- REMOVER -app PARA FUNCIONAR O FIREBASE, O LINK ESTA ERRADO -->
-    <!-- <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="src/controller/DropBoxController.js"></script>
-    <script src="src/index.js"></script>
+    <script src="js/controller/DropBoxController.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
