--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Guilherme Selair">
 
     <title>Projeto Morfeu - DropBox Clone</title>
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <link href="assets/css/dropbox-clone.css" rel="stylesheet">
 </head>
@@ -93,7 +93,7 @@
                             <span role="button" tabindex="0" aria-haspopup="true" aria-expanded="false" class="maestro-nav-switcher-button" data-reactid="48">
                                 <div class="maestro-nav-switcher-button__content" data-reactid="49">
                                     <div class="maestro-nav-switcher-button__info" data-reactid="50">
-                                        <div class="maestro-nav-switcher-button__title" data-reactid="51">HCODE</div>
+                                        <div class="maestro-nav-switcher-button__title" data-reactid="51">Guilherme Selair</div>
                                         <div class="maestro-nav-switcher-button__label" data-reactid="52">3 membros</div>
                                     </div>
                                     <svg class="maestro-nav-switcher-button__icon" viewBox="0 0 24 24" data-reactid="53">
