--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
                                     <nav class="page-header-text u-l-fl" id="browse-location" aria-label="Hierarquia de pastas" role="navigation">
                                         <span class="breadcrumb-segment__wrapper">
                                             <span class="ue-effect-container uee-BreadCrumbSegment-link-0">
-                                                <a href="https://www.dropbox.com/work" class="breadcrumb-segment">HCODE</a>
+                                                <a href="https://www.dropbox.com/work" class="breadcrumb-segment">Home</a>
                                             </span>
                                             <svg width="24" height="24" viewBox="0 0 24 24" class="mc-icon-template-stateless" style="top: 4px; position: relative;">
                                                 <title>arrow-right</title>
@@ -135,7 +135,7 @@
                                                     fill-rule="evenodd"></path>
                                             </svg>
                                         </span>
-                                        <span>Avell</span>
+                                        <span></span>
                                     </nav>
                                 </span>
                             </span>
